Add unit tests for LambdaTest and Uploader tasks (#31)